--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.7.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
